fix text centering on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -39,7 +39,7 @@ p {
 }
 
 #welcome-large {
-    font-size: 52px;
+    text-decoration: bold;
 }
 
 .welcome-btn {
